[package]
name = "swift2vue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
colored = "2.1.0"
handlebars = "5.1.2"
id_tree = "1.8.0"
napi = "2.16.6"
napi-derive = "2.16.5"
regex = "1.10.5"
serde_json = "1.0.117"
tree-sitter = "0.22.6"
tree-sitter-swift = "0.5.0"
xmltree = "0.10.3"

[build-dependencies]
napi-build = "2.1.3"