[package]
name = "swift2vue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
handlebars = "5.1.2"
id_tree = "1.8.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
napi = "2.16.6"
napi-derive = "2.16.5"
regex = "1.10.5"
serde_json = "1.0.117"
swc_bundler = "0.228.0"
swc_common = "0.33.26"
swc_ecma_ast = "0.113.7"
swc_ecma_codegen = "0.149.3"
swc_ecma_loader = { version = "0.45.28", features = ["node", "cache"]}
swc_ecma_parser = "0.144.3"
tree-sitter = "0.22.6"
tree-sitter-swift = "0.5.0"
xmltree = "0.10.3"

[build-dependencies]
napi-build = "2.1.3"
